@@ -75,7 +75,7 @@ int	PROC_MEM(const char *cmd, const char *param, unsigned flags, AGENT_RESULT *r
 #ifdef HAVE_SYS_PROCFS_H
 	DIR			*dir;
 	struct dirent		*entries;
-	struct stat		buf;
+	zbx_stat_t		buf;
 	struct psinfo		psinfo;
 	int			fd = -1;
 #else
@@ -143,7 +143,7 @@ int	PROC_MEM(const char *cmd, const char *param, unsigned flags, AGENT_RESULT *r
 
 		zbx_snprintf(tmp, sizeof(tmp), "/proc/%s/psinfo", entries->d_name);
 
-		if (0 != stat(tmp, &buf))
+		if (0 != zbx_stat(tmp, &buf))
 			continue;
 
 		if (-1 == (fd = open(tmp, O_RDONLY)))
@@ -244,7 +244,7 @@ int	PROC_NUM(const char *cmd, const char *param, unsigned flags, AGENT_RESULT *r
 #ifdef HAVE_SYS_PROCFS_H
 	DIR			*dir;
 	struct dirent		*entries;
-	struct stat		buf;
+	zbx_stat_t		buf;
 	struct psinfo		psinfo;
 	int			fd = -1;
 #else
@@ -310,7 +310,7 @@ int	PROC_NUM(const char *cmd, const char *param, unsigned flags, AGENT_RESULT *r
 
 		zbx_snprintf(tmp, sizeof(tmp), "/proc/%s/psinfo", entries->d_name);
 
-		if (0 != stat(tmp, &buf))
+		if (0 != zbx_stat(tmp, &buf))
 			continue;
 
 		if (-1 == (fd = open(tmp, O_RDONLY)))
