@@ -175,12 +175,13 @@ static int	dns_query(const char *cmd, const char *param, unsigned flags, AGENT_R
 #if defined(HAVE_RES_QUERY) || defined(_WINDOWS)
 
 	size_t			offset = 0;
-	int			res, type, retrans, retry, i, ret = SYSINFO_RET_FAIL,
-				saved_nscount, saved_retrans, saved_retry;
+	int			res, type, retrans, retry, i, ret = SYSINFO_RET_FAIL;
 	char			ip[MAX_STRING_LEN], zone[MAX_STRING_LEN], tmp[MAX_STRING_LEN], buffer[MAX_STRING_LEN];
 	struct in_addr		inaddr;
+#ifndef _WINDOWS
+	int			saved_nscount, saved_retrans, saved_retry;
 	struct sockaddr_in	saved_ns;
-
+#endif
 	typedef struct
 	{
 		char	*name;
