@@ -112,12 +112,12 @@ static int	get_swap_dev_stat(const char *swapdev, swap_stat_t *result)
 	int		ret = SYSINFO_RET_FAIL;
 	char		line[MAX_STRING_LEN];
 	int		rdev_major, rdev_minor;
-	struct stat	dev_st;
+	zbx_stat_t	dev_st;
 	FILE		*f;
 
 	assert(result);
 
-	if (-1 == stat(swapdev, &dev_st))
+	if (-1 == zbx_stat(swapdev, &dev_st))
 		return ret;
 
 	if (NULL == (f = fopen(INFO_FILE_NAME, "r")))
